回退预览特性,提高版本号